Wed Jun 15 13:03:56 GMT 2011  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc,common/remote-database.h,
	  common/remoteprotocol.h,docs/remote_protocol.rst,net/remoteserver.cc:
	  Unify REPLY_GREETING and REPLY_UPDATE; send (last_docid - doccount)
	  instead of last_docid; send (doclen_ubound - doclen_lbound) instead
	  of doclen_ubound.  This requires a remote protocol major version
	  bump.  Fix out of date documentation for what's in a REPLY_UPDATE
	  message.

Wed Jun 15 12:24:07 GMT 2011  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc: Remove special check which gives
	  a more helpful error message when a modern client is used against a
	  remote server running Xapian <= 0.9.6.

Wed Jun 15 11:07:19 GMT 2011  Olly Betts <olly@survex.com>

	* net/remoteserver.cc: Remove unnecessary call to reopen() - either we
	  just called it or we're a writable database and it doesn't do
	  anything.

Wed Jun 15 09:03:06 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-core/backends/remote/remote-database.cc,
	  xapian-core/common/remote-database.h: Factor out the code to decode
	  the returned stats into a new apply_stats_update() method.

Wed Jun 15 08:57:12 GMT 2011  Olly Betts <olly@survex.com>

	* xapian-core/Makefile.am: Remove check-* from .PHONY as that doesn't
	  work with a pattern rule.  Fix check-% pattern rule to actually work.

Tue Jun 14 15:11:38 GMT 2011  Olly Betts <olly@survex.com>

	* docs/remote_protocol.rst: Fixed typo which reversed the intended
	  sense.

Tue Jun 14 02:01:42 GMT 2011  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Avoid portability warning from automake
	  about GNU make %-style pattern rules.

Tue Jun 14 01:42:01 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Add unnecessary AC_LANG_SOURCE wrapper to shut up
	  autoconf warning.

Tue Jun 14 01:18:54 GMT 2011  Olly Betts <olly@survex.com>

	* configure.ac: Reset LIBRARY_VERSION_INFO to 0:0:0 for the